# COMP-3004-D1

./: CMakeLists.txt  README.md  README.txt  main.cpp
gui/: CMakeLists.txt  CatalogueModel.cpp  CatalogueModel.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  PatronWindow.cpp  PatronWindow.h  PatronWindow.ui
models/: Book.cpp  Book.h  Item.cpp  Item.h  LibrarySystem.cpp  LibrarySystem.h  Magazine.cpp  Magazine.h  Movie.cpp  Movie.h  Patron.h  User.cpp  User.h  VideoGame.cpp  VideoGame.h
